# jailguard

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .taplo.toml  .typos.toml  ACCURACY_BOOST_RESEARCH_2026.md  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONFIGURATION_GUIDE.md  CONTINUATION_SESSION_SUMMARY.md  CONTRIBUTING.md  CURRENT_PROGRESS.md  Cargo.toml  DATASETS.md  DATASETS_INDEX.md  DATASETS_QUICK_REFERENCE.txt  DATASET_CATALOG.md  DATASET_GENERATION_GUIDE.md  DATASET_QUICK_REFERENCE.md  DATASET_ROADMAP_2026.md  Dockerfile  EMBEDDING_GENERATION_STATUS.md  EXPANDED_DATASET_STATUS.md  EXPANSION_QUICKSTART.md  FINAL_CHECKLIST.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.md  GAPS.md  GRADIENT_TRAINING_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_QUICK_START.md  IMPLEMENTATION_STATUS.md  JAILGUARD_COMPETITIVE_ANALYSIS.md  JAILGUARD_VS_SOTA_ANALYSIS.md  LICENSE  (+45 more)
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: extract-release-notes.sh  smoke-test.py
.github/workflows/: ci.yml  codeql.yml  elixir.yml  go.yml  js.yml  outdated.yml  python.yml  release.yml  scorecard.yml
benches/: detect.rs
data/: MULTILINGUAL_README.md  README.md  prompt_injections_real.json  test_5.json  tiny_training_data.json  train_20.json  training_data.json
data/baseline/: baseline_metrics_v0.1.0.json
data/expansion/: expansion_statistics.json
data/synthetic/: ar_injection.json  bn_injection.json  de_injection.json  es_injection.json  fi_injection.json  fr_injection.json  hi_injection.json  it_injection.json  jv_injection.json  ko_injection.json  ru_injection.json  sr_injection.json  sw_injection.json  th_injection.json  tl_injection.json  vi_injection.json  zh_injection.json
docs/: API.md  ARCHITECTURE.md  BASELINE_DETECTOR_STATUS.md  COLLECTION_DEPLOYMENT.md  DATASET_EXTENSION_STRATEGY.md  DATASET_STATUS.md  DEPLOYMENT_GUIDE.md  EXPERIMENTAL_FEATURES.md  FINAL_RESULTS.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  MODEL_PERSISTENCE.md  MODEL_PERSISTENCE_IMPLEMENTATION.md  NAMING_QUICK_REFERENCE.md  NEURAL_NETWORK_ARCHITECTURE.md  NEURAL_NETWORK_VERIFICATION.md  PERFORMANCE_TUNING.md  PHASE_5C_API_DEPLOYMENT.md  PHASE_5_DEPLOYMENT.md  PRODUCTION_READY.md  README.md  RELEASE_v0.1.0.md  SOTA.md  SOTA_IMPLEMENTATION_COMPLETE.md  THREE_FORMAT_GUIDE.md  TRAINING.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
docs/archive/: LIBRARY_INTEGRATION_GUIDE.md  MODEL_DOWNLOADS_REFERENCE.md  PROJECT_STATUS.md  (+11 more)
elixir/: Makefile  README.md  mix.exs
elixir/native/jailguard_nif/: Cargo.toml
elixir/native/jailguard_nif/src/: lib.rs
evaluation/: README.md  compare_embeddings.rs  comprehensive_evaluation.rs  evaluate_detector.rs
examples/: README.md  cold_start_bench.rs  collection_daemon.rs  comprehensive_evaluation.rs  deploy_collection_pipeline.rs  download_datasets.sh  ensemble_demo.rs  fast_embedding_generation.rs  fine_tune_stage1.rs  fine_tune_stage2.rs  fine_tune_stage3.rs  fine_tune_stage4.rs  fine_tune_stage5.rs  fine_tune_stage6.rs  fine_tune_stage7.rs  full_pipeline.rs  generate_embeddings_fast.rs  generate_embeddings_native.rs  load_and_inference.rs  performance_optimization_demo.rs  phase1_dataset_extension.rs  phase1_pretrained_embeddings.rs  phase1_pretrained_integration.rs  phase_9_sota_validation.rs  precompute_embeddings.rs  precompute_embeddings_fast.rs  quick_start.rs  real_training.rs  score_jsonl.rs  score_test.rs  test_paraphrases.rs  train.rs  train_ensemble_classifier.rs  train_minilm_proper.rs  train_multitask.rs  train_neural_binary.rs  train_transformer_fast.rs  train_with_backprop.rs  train_with_backprop_proper.rs  train_with_backprop_real.rs  (+2 more)
go/: .gitignore  .golangci.yml  README.md  cgo_dev.go  generate.go  go.mod  jailguard.go  jailguard_purego.go  jailguard_test.go  types.go
include/: jailguard.h
inference/: README.md  verify_json_model.rs
js/: .gitignore  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
loaders/: jailguard_loader.js  jailguard_loader.py
models/: README.md  jailguard_injection_detector.json  jailguard_injection_detector.onnx.metadata.json  jailguard_injection_detector.safetensors  neural_binary_200k.json
python/: README.md
results/: deepset_j1n2.jsonl  deepset_pipeline.jsonl  deepset_shalyhin.jsonl  jailguard_j1n2.jsonl  jailguard_pipeline.jsonl  jailguard_shalyhin.jsonl  madhur_j1n2.jsonl  madhur_pipeline.jsonl  madhur_shalyhin.jsonl  protectai-base_j1n2.jsonl  protectai-base_pipeline.jsonl  protectai-base_shalyhin.jsonl  summary.md
scripts/: README.md  balanced_augmentation.py  baseline_evaluation.py  bench.sh  benchmark_bedrock.py  compare_models.py  compute_metrics.py  convert_to_onnx.py  dataset_split.py  download_and_combine_datasets.py  download_expansion_datasets.py  download_large_datasets.sh  download_training_data.py  embedding_pipeline.py  evaluate_on_data.rs  generate_synthetic_dataset.py  generate_training_data.py  precompute_embeddings_minilm.py  prepare_datasets.py  split_train_test.py  taxonomy_integration.py  tiny_training_dataset.py  unified_schema.py
src/: advanced_ensemble.rs  attention_tracker.rs  c_api.rs  embedded.rs  embedded.rs.dual-api.bak  ensemble.rs  error.rs  heuristics.rs  jailguard.rs  lib.rs  lib.rs.dual-api.bak  model_manager.rs  napi.rs  network.rs  python.rs  validation.rs  wasm.rs
tests/: accuracy_benchmark.rs  accuracy_debug.rs  ensemble_integration_tests.rs  fallback_embedding_test.rs  integration_comprehensive.rs  integration_jailguard.rs  integration_sota_complete.rs  phase1_pipeline_test.rs  phase7_comprehensive.rs  semantic_embedding_integration_test.rs  test_train_eval.rs  test_training_pipeline.rs  test_with_real_data.rs
train/: README.md  evaluate_on_test_set.rs  onnx_embedding_generation.rs  train_minilm_with_gradients.rs  train_neural_binary.rs  train_on_expanded_dataset.rs
(+221 files in other folders)
