[package]
name = "jailguard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Prompt injection and jailbreak defense using neural networks"
repository = "https://github.com/yfedoseev/jailguard"
readme = "README.md"
documentation = "https://docs.rs/jailguard"
keywords = ["security", "llm", "prompt-injection", "jailbreak", "ai-safety"]
categories = ["security", "machine-learning"]

include = [
    "src/**/*.rs",
    "models/neural_binary_200k.json",
    "models/tokenizer.json",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "examples/quick_start.rs",
]

[dependencies]
# Core — always present
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "2"

# ONNX inference (default — required for real ML pipeline)
ort = "=2.0.0-rc.9"
ort-sys = "=2.0.0-rc.9"
tokenizers = "0.21"
ndarray = "0.16"
ureq = "2"

# Feature-gated dependencies
burn = { version = "0.19", default-features = false, optional = true }
burn-ndarray = { version = "0.19", default-features = false, optional = true }
burn-wgpu = { version = "0.19", optional = true }
burn-train = { version = "0.19", default-features = false, features = ["sys-metrics"], optional = true }
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }
unicode-segmentation = { version = "1.12", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dirs = { version = "5.0", optional = true }
lru = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
safetensors = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
csv = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
full = [
    "dep:burn", "dep:burn-ndarray",
    "dep:parking_lot", "dep:tracing", "dep:unicode-segmentation",
    "dep:rand", "dep:uuid", "dep:dirs", "dep:lru", "dep:regex",
    "dep:safetensors",
]
wgpu = ["full", "dep:burn-wgpu"]
train = ["full", "dep:burn-train"]
download = ["full", "dep:reqwest", "dep:tokio", "dep:csv"]
# Legacy feature names (kept for cfg compatibility in existing source)
cpu = []
pretrained = ["full"]
semantic-embeddings = []

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Deny dangerous patterns in production
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Pedantic lints (cherry-picked for value)
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"

# Cargo group
cargo_common_metadata = "warn"
