[package]
name = "jailguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Prompt injection and jailbreak defense using neural networks"
repository = "https://github.com/yfedoseev/jailguard"
readme = "README.md"
documentation = "https://docs.rs/jailguard"
keywords = ["security", "llm", "prompt-injection", "jailbreak", "ai-safety"]
categories = ["security", "machine-learning"]

# Only the embedded-detector sources ship on crates.io.
# Feature-gated research modules (src/training, src/collection, src/agent,
# src/api, src/dataset, src/detection, src/embeddings, src/ensemble,
# src/evaluation, src/feedback, src/heuristics, src/inference, src/jailguard,
# src/model, src/monitoring, src/output_validation, src/performance,
# src/pretrained, src/privilege, src/spotlighting, src/task_tracking,
# src/tokenizer, src/validation, src/advanced_ensemble, src/attention_tracker)
# live in the git repo but are NOT distributed in the published crate.
# Enabling `--features full` against the crates.io release will fail to
# compile — clone the git repo if you want the research surface.
include = [
    "src/lib.rs",
    "src/embedded.rs",
    "src/error.rs",
    "src/model_manager.rs",
    "src/network.rs",
    "models/neural_binary_200k.json",
    "models/tokenizer.json",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "examples/quick_start.rs",
]

[dependencies]
# Core — always present
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "2"

# ONNX inference (default — required for real ML pipeline).
ort = "=2.0.0-rc.9"
tokenizers = "0.21"
ndarray = "0.16"
ureq = "2"

# Feature-gated dependencies (only pulled in under `--features full` or friends).
burn = { version = "0.19", default-features = false, optional = true }
burn-ndarray = { version = "0.19", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }
unicode-segmentation = { version = "1.12", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dirs = { version = "5.0", optional = true }
lru = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
csv = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
full = [
    "dep:burn",
    "dep:burn-ndarray",
    "dep:parking_lot",
    "dep:tracing",
    "dep:unicode-segmentation",
    "dep:rand",
    "dep:uuid",
    "dep:dirs",
    "dep:lru",
    "dep:regex",
]
download = ["full", "dep:reqwest", "dep:tokio", "dep:csv"]
# Legacy feature names retained for cfg compatibility in `full`-gated source.
cpu = []
pretrained = ["full"]
semantic-embeddings = []

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "ensemble_demo"
path = "examples/ensemble_demo.rs"
required-features = ["full"]

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"
required-features = ["full"]

[[example]]
name = "unified_api_ensemble_demo"
path = "examples/unified_api_ensemble_demo.rs"
required-features = ["full"]

[lints.rust]
unsafe_code = "warn"
# missing_docs is scoped to the library (src/lib.rs) — applying it crate-wide
# makes every integration test trigger a "missing crate-level docs" warning.

[lints.clippy]
# Deny dangerous patterns in production
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# print_stdout / print_stderr are scoped to the library (src/lib.rs);
# examples and binaries legitimately print to stdout.

# Pedantic lints (cherry-picked for value)
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"

# Cargo group
cargo_common_metadata = "warn"
