[package]
name = "jailguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Prompt injection and jailbreak defense using neural networks"
repository = "https://github.com/yfedoseev/jailguard"
readme = "README.md"
documentation = "https://docs.rs/jailguard"
keywords = ["security", "llm", "prompt-injection", "jailbreak", "ai-safety"]
categories = ["security", "machine-learning"]

# Only the embedded-detector sources ship on crates.io.
# Feature-gated modules (src/training and the full-feature surface)
# live in the git repo but are NOT distributed in the published crate.
# Enabling `--features full` against the crates.io release will fail to
# compile — clone the git repo if you want the research surface.
include = [
  "src/lib.rs",
  "src/embedded.rs",
  "src/error.rs",
  "src/model_manager.rs",
  "src/network.rs",
  "src/python.rs",
  "src/c_api.rs",
  "models/neural_binary_200k.json",
  "models/tokenizer.json",
  "Cargo.toml",
  "build.rs",
  "cbindgen.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "examples/quick_start.rs",
  "python/",
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core — always present
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "2"

# ONNX inference (default — required for real ML pipeline).
# Pinned to rc.9 — rc.10+ requires glibc 2.38+; this dev box has 2.36.
# Bumping requires verifying the target deployment glibc.
ort = "=2.0.0-rc.9"
tokenizers = "0.23"
ndarray = "0.16"
ureq = "3"
sha2 = "0.11"

# Python bindings (pyo3 + maturin)
pyo3 = { version = "0.22", features = ["abi3-py38"], optional = true }

# Node.js bindings (napi-rs / N-API)
napi = { version = "2", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "2", optional = true }

# Feature-gated dependencies (only pulled in under `--features full` or friends).
burn = { version = "0.20", default-features = false, optional = true }
burn-ndarray = { version = "0.20", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }
unicode-segmentation = { version = "1.12", optional = true }
rand = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dirs = { version = "6.0", optional = true }
lru = { version = "0.18", optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
csv = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = "0.8"

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = []
python = ["pyo3"]
# Reserved for future use — currently a no-op since the C ABI is always
# compiled in (the cdylib + staticlib artifacts always export the
# `jailguard_*` symbols). Header regeneration is via `make regen-c-header`.
c-api = []
# Node.js native module via napi-rs / N-API.
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
full = [
  "dep:burn",
  "dep:burn-ndarray",
  "dep:parking_lot",
  "dep:tracing",
  "dep:unicode-segmentation",
  "dep:rand",
  "dep:uuid",
  "dep:dirs",
  "dep:lru",
  "dep:regex",
]
# Training infrastructure — not part of the public API.
# Used by upstream training tooling to access NeuralBinaryNetwork / NeuralDataLoader.
training = ["full", "dep:rand"]
download = ["full", "dep:reqwest", "dep:tokio", "dep:csv"]
# Legacy feature names retained for cfg compatibility in `full`-gated source.
cpu = []
pretrained = ["full"]
semantic-embeddings = []

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

# cold_start_bench is autodiscovered from examples/cold_start_bench.rs —
# left undeclared so it stays out of the published crate (which only ships
# the files listed in the top-level `include` field).

[[bench]]
name = "detect"
harness = false

[[example]]
name = "ensemble_demo"
path = "examples/ensemble_demo.rs"
required-features = ["full"]

[[example]]
name = "unified_api_ensemble_demo"
path = "examples/unified_api_ensemble_demo.rs"
required-features = ["full"]

[[example]]
name = "score_test"
path = "examples/score_test.rs"
required-features = ["full"]

[lints.rust]
unsafe_code = "warn"
# missing_docs is scoped to the library (src/lib.rs) — applying it crate-wide
# makes every integration test trigger a "missing crate-level docs" warning.

[lints.clippy]
# Deny dangerous patterns in production
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# print_stdout / print_stderr are scoped to the library (src/lib.rs);
# examples and binaries legitimately print to stdout.

# Pedantic lints (cherry-picked for value)
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"

# Cargo group
cargo_common_metadata = "warn"
