[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jailguard"
version = "0.1.0"
description = "Fast prompt injection detection — Rust-powered, CPU-only, no GPU required"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["security", "llm", "prompt-injection", "jailbreak", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No Python dependencies — the wheel is self-contained.
# The ONNX embedding model (~90 MB) is downloaded on first use to
# ~/.cache/jailguard/ and is NOT bundled in the wheel.
dependencies = []

[project.urls]
Homepage = "https://github.com/yfedoseev/jailguard"
Repository = "https://github.com/yfedoseev/jailguard"
Documentation = "https://docs.rs/jailguard"

[tool.maturin]
# Native extension lives at jailguard._jailguard
module-name = "jailguard._jailguard"
# Python source package lives in python/
python-source = "python"
# Enable the PyO3 bindings feature
features = ["python"]
# Build for Python 3.8+ using stable ABI (smaller wheels, wider compatibility)
# Corresponds to pyo3 abi3-py38 feature

# ---------------------------------------------------------------------------
# Test tooling
# ---------------------------------------------------------------------------

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "maturin>=1.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "slow: tests that take > 1s (deselect with '-m \"not slow\"')",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
    "target/",
    "dist/",
    "build/",
    ".venv/",
    "venv/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"python/tests/*" = [
    "B011",  # don't lint asserts in tests
]
"python/jailguard/_jailguard.pyi" = [
    "F401",  # stubs deliberately re-export names
]
